Fix CSS issue with GitHub icon alignment

--- a/app/src/pages/contactPage/ContactPage.css
+++ b/app/src/pages/contactPage/ContactPage.css
@@ -117,7 +117,3 @@ form {
   gap: 20px;
   font-size: 50px;
 }
-
-.fa-brands.fa-github {
-  te
-}
